username and userposition text size wrapping issue solved

--- a/public/new-design-company/assets/css/style.css
+++ b/public/new-design-company/assets/css/style.css
@@ -392,11 +392,19 @@ label.form-lable.boldlable {
     font-size: 18px;
     color: white;
     font-weight: 500;
+    max-width: 65px;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
 }
 .user_position{
     font-family: var(--oswald-font);
     font-size: 16px;
     color: white;
+    max-width: 65px;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
     font-weight: 300;
 }
 .sidebar_logo {
